实现了管理员查看所有商品和搜索商品（部分）

--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="myFunctions.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="myFunctions.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
